--- a/PythonMoora/management/data_siswa/templates/data_siswa/detail_siswamat.html
+++ b/PythonMoora/management/data_siswa/templates/data_siswa/detail_siswamat.html
@@ -76,7 +76,7 @@
                             </table>
 
                             
-                            <a href="{% url 'data_siswa:editbio' siswa.id %}" class="btn btn-primary pull-right"><i class="fa fa-pencil-square-o"></i> Edit</a>
+                            <a href="{% url 'data_siswa:editmat' siswa.id %}" class="btn btn-primary pull-right"><i class="fa fa-pencil-square-o"></i> Edit</a>
 
                         </div>
                     </div>
