--- a/PythonMoora/management/data_siswa/templates/data_siswa/fisika.html
+++ b/PythonMoora/management/data_siswa/templates/data_siswa/fisika.html
@@ -2,7 +2,7 @@
 <div class="content-wrapper">
 <section class="content-header">
     <div class="header text-center">
-      <h3 class="title">Data Peserta Olimpiade Biologi</h3>
+      <h3 class="title">Data Peserta Olimpiade Fisika</h3>
     </div>
     <h1>
       Data Peserta
@@ -38,10 +38,10 @@
 
                                 
                                 <td >
-                                    <a href="{% url 'data_siswa:detailbio' a.siswa_id %}" class="btn btn-info">
+                                    <a href="{% url 'data_siswa:detailfis' a.siswa_id %}" class="btn btn-info">
                                             <i class="fa fa-eye"></i>
                                     </a>
-                                    <a href="{% url 'data_siswa:hapus_data_siswabio' id=a.siswa.user_id%}" class="btn btn-danger">
+                                    <a href="{% url 'data_siswa:hapus_data_siswafis' id=a.siswa.user_id%}" class="btn btn-danger">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </td>
@@ -70,11 +70,11 @@
             <!-- <p>One fine body&hellip;</p> -->
             <div class="box box-danger">
               <div class="box-header">
-                <h3 class="box-title">Olimpiade Biologi</h3>
+                <h3 class="box-title">Olimpiade Fisika</h3>
               </div>
               <div class="box-body">
                 <!-- Date dd/mm/yyyy -->
-                <form  action="{% url 'data_siswa:save_data_siswabio'%}" method="POST" enctype="multipart/form-data">
+                <form  action="{% url 'data_siswa:save_data_siswafis'%}" method="POST" enctype="multipart/form-data">
                   {% csrf_token %}
             <div class="col-md-6">
             <div class="form-group">
@@ -111,7 +111,7 @@
             <div class="col-md-6">
             <div class="form-group" hidden>
                 <label for="" class="control-label">Olimpiade</label>
-                <input type="text" class="form-control" name="mata_pelajaran" value="biologi" required>
+                <input type="text" class="form-control" name="mata_pelajaran" value="fisika" required>
             </div>
 
             <div class="form-group">
@@ -120,7 +120,7 @@
             </div> 
 
             <div class="form-group" >
-                <label for="" class="control-label">Nilai Akademik Biologi</label>
+                <label for="" class="control-label">Nilai Akademik Fisika</label>
                 <input type="text" class="form-control" name="nilai" value="" required>
             </div>
 
@@ -266,7 +266,6 @@ function sleksisikap() {
     }
 
 </script>
-
 <script type="text/javascript">
     $(document).ready(function() {
         $('#example1').DataTable( {
