--- a/PythonMoora/management/data_siswa/templates/data_siswa/kimia.html
+++ b/PythonMoora/management/data_siswa/templates/data_siswa/kimia.html
@@ -1,21 +1,81 @@
-{% extends 'layout/dashboard/index.html' %} {% load staticfiles %}  {% load widget_tweaks %}{% block content %}
-
+{% extends 'layout/dashboard/index2.html' %} {% block content %}
 <div class="content-wrapper">
-   <section class="content">
-    <div class="box box-default">
-        <div class="box-header with-border">
-          <h3 class="box-title">Input Data Siswa Olimpiade Biologi</h3>
+<section class="content-header">
+    <div class="header text-center">
+      <h3 class="title">Data Peserta Olimpiade Kimia</h3>
+    </div>
+    <h1>
+      Data Peserta
+        <a class="btn btn-info pull-right" data-toggle="modal" data-target="#modal-default"><i class="fa fa-plus-square">  Tambah Data</i></a>
+    </h1>
+    
+ </section>
+        <section class="content">
+            <div class="box">
+            <div class="box-body">
+            <div class="box-header">
+            <div class="">
+                   
+                <table id="example1" class="table table-responsive table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Username</th>
+                            <th>Nama</th>
+                            <th>Tanggal_lahir</th>
+                            <th>Jenis Kelamin</th>
+                            <th>Kelas</th>
+                            <th>Aksi</th>
+                        </tr>
+                    </thead>
+                        <tbody>
+                        {% for a in siswa %}
+                            <tr>
+                                <td>{{a.siswa.user}}</td>
+                                <td>{{a.siswa.nama}}</td>
+                                <td>{{a.siswa.tanggal_lahir}}</td>
+                                <td>{{a.siswa.jenis_kelamin}}</td>
+                                <td>{{a.siswa.kelass.jenjang}}</td>
 
-          <div class="box-tools pull-right">
-            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-remove"></i></button>
+                                
+                                <td >
+                                    <a href="{% url 'data_siswa:detailkim' a.siswa_id %}" class="btn btn-info">
+                                            <i class="fa fa-eye"></i>
+                                    </a>
+                                    <a href="{% url 'data_siswa:hapus_data_siswakim' id=a.siswa.user_id%}" class="btn btn-danger">
+                                        <i class="fa fa-trash"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                            {% endfor %} 
+                        </tbody>
+                </table>
+                </div>
+                </div>
+                </div>
+        </section>
+                </div>
+
+
+<!-- #######################################Tambah#################################################################### -->
+  <!-- Modal -->
+  <div class="modal fade" id="modal-default">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Input Data Peserta</h4>
           </div>
-        </div>
-        <!-- /.box-header -->
-        <div class="box-body" style="">
-          <div class="row">
-           <form action="{% url 'data_siswa:save_data_siswabio' %}" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
+          <div class="modal-body">
+            <!-- <p>One fine body&hellip;</p> -->
+            <div class="box box-danger">
+              <div class="box-header">
+                <h3 class="box-title">Olimpiade Kimia</h3>
+              </div>
+              <div class="box-body">
+                <!-- Date dd/mm/yyyy -->
+                <form  action="{% url 'data_siswa:save_data_siswakim'%}" method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
             <div class="col-md-6">
             <div class="form-group">
                 <label for="username">username</label>
@@ -51,16 +111,16 @@
             <div class="col-md-6">
             <div class="form-group" hidden>
                 <label for="" class="control-label">Olimpiade</label>
-                <input type="text" class="form-control" name="mata_pelajaran" value="biologi" required>
+                <input type="text" class="form-control" name="mata_pelajaran" value="kimia" required>
             </div>
 
-            {% comment %} <div class="form-group">
+            <div class="form-group">
                 <label for="" class="control-label">Tanggal Lahir</label>
                 <input required type="text" id="date" class="form-control" name="tanggal_lahir" value="" readonly>
-            </div> {% endcomment %}
+            </div> 
 
             <div class="form-group" >
-                <label for="" class="control-label">Nilai Akademik Biologi</label>
+                <label for="" class="control-label">Nilai Akademik Kimia</label>
                 <input type="text" class="form-control" name="nilai" value="" required>
             </div>
 
@@ -117,27 +177,30 @@
             </label> &nbsp; <input type="checkbox" name="staff">
             </div>
             <br>
-             <div class="form-group">
-                <button type="submit" class="btn btn-success pull-right" style="margin-left: 8px;">Simpan</button>
-                <a href="{% url 'data_siswa:biologi'%}" class="btn btn-danger pull-right">
-                    <i class="fa fa-arrow-left"></i> Kembali</a>
-            </div>
-              <!-- /.form-group -->
-            </div>
-            <!-- /.col -->
-             </form>
-          </div>
-          <!-- /.row -->
+            
+          
+      </div>
+      <!-- /.modal-content -->
+      
+    </div>
+    <!-- /.modal-dialog -->
+    <div class="modal-footer">
+            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+          </form>
         </div>
-        <!-- /.box-body -->
-    
-
-    </section>
-</div>
-
-<script >
-
-  function sleksijenjang() {
+  </div>
+  <!-- /.modal -->
+<style>
+.modal-dialog{
+    padding-top: 0px;
+    width: 60%;
+    min-height: 100%;
+}
+</style>
+<script>
+$('#date').datepicker();
+function sleksijenjang() {
     var a =40 ;
     var b =55 ;
     var c =70 ;
@@ -202,19 +265,19 @@ function sleksisikap() {
       }
     }
 
-$('#date').datepicker();
-
-function readURL(input) {
-
-    if (input.files && input.files[0]) {
-        var reader = new FileReader();
-
-        reader.onload = function (e) {
-            $('#picture').attr('src', e.target.result);
-        }
-
-        reader.readAsDataURL(input.files[0]);
-    }
-}
 </script>
-{%endblock%}
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#example1').DataTable( {
+            "lengthMenu": [[5, 10, 25, 50, -1], [5, 10, 25, 50,]]
+        } );
+    } );
+</script>
+{% if messages %}
+  {% for message in messages %}
+  <script>
+    toastr.success('{{message}}')
+  </script>
+  {% endfor %}
+  {% endif %}
+{% endblock %}
