--- a/PythonMoora/management/karakter/templates/karakter/table.html
+++ b/PythonMoora/management/karakter/templates/karakter/table.html
@@ -3,8 +3,8 @@
 <div class="box">
   <div class="box-body">
     <div class="box-header">
-      <a type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-default"> 
-       Tambah <i class="fa fa-plus"></i> 
+      {% comment %} <a type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-default"> 
+       Tambah <i class="fa fa-plus"></i>  {% endcomment %}
      </a>
     </div>
     <table id="example1" class="table table-bordered table-striped">
