--- a/PythonMoora/management/kelas/templates/kelas/table.html
+++ b/PythonMoora/management/kelas/templates/kelas/table.html
@@ -6,9 +6,9 @@
     <div class="box-header">
 
      <!-- <h3 class="box-title">Kelas</h3> -->
-     <a type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-default"> 
+     {% comment %} <a type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-default"> 
        Tambah <i class="fa fa-plus"></i> 
-     </a>
+     </a> {% endcomment %}
         
 
 
