--- a/PythonMoora/management/nilai_akademik/templates/nilai_akademik/table.html
+++ b/PythonMoora/management/nilai_akademik/templates/nilai_akademik/table.html
@@ -5,10 +5,10 @@
     <div class="box-header">
 
      <!-- <h3 class="box-title">Kelas</h3> -->
-     <a type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-defaultna"> 
+     {% comment %} <a type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-defaultna"> 
        Tambah <i class="fa fa-plus"></i> 
-     </a>
-        </button>
+     </a> {% endcomment %}
+       
 
 
 
