--- a/PythonMoora/management/plomba/templates/plomba/table.html
+++ b/PythonMoora/management/plomba/templates/plomba/table.html
@@ -2,9 +2,9 @@
 <div class="box">
     <div class="box-body">
         <div class="box-header">
-            <a type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-default"> 
+            {% comment %} <a type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-default"> 
              Tambah <i class="fa fa-plus"></i> 
-         </a>
+         </a> {% endcomment %}
      </div>
      <table id="example1" class="table table-bordered table-striped">
         <thead>
