--- a/PythonMoora/templates/layout/dashboard/header.html
+++ b/PythonMoora/templates/layout/dashboard/header.html
@@ -13,30 +13,31 @@
       <span class="sr-only">Toggle navigation</span>
       
     </a>
-    <ul class="nav navbar-nav">
-      <li ><a href="{% url 'daftar_olimpiade:view' %}"><b> Daftar User </b></a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Soal Tes Olimpiade <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href ="{% url 'tesolimpiade:view' %}">Biologi</a></li>
-          <li><a href="{% url 'tesolimpiade:fisika' %}">Fisika</a></li>
-          <li><a href="{% url 'tesolimpiade:kimia' %}">Kimia</a></li>
-          <li><a href="{% url 'tesolimpiade:matematika' %}">Matematika</a></li>
-        </ul>
-      </li>
-      
-
-    </ul>
-
+  
     <div class="navbar-custom-menu">
 
       <ul class="nav navbar-nav">
-        <li>
-          <a href="{% url 'login:doLogout'%}">
-            <i class="fa fa-power-off"> Log out 
-            </i>
-          </a>
-        </li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Soal Tes Olimpiade <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href ="{% url 'tesolimpiade:view' %}">Biologi <i class="fa fa-angle-double-right fa-pull-right"></i></a></li>
+          <li><a href="{% url 'tesolimpiade:fisika' %}">Fisika <i class="fa fa-angle-double-right fa-pull-right"></i></a></li>
+          <li><a href="{% url 'tesolimpiade:kimia' %}">Kimia <i class="fa fa-angle-double-right fa-pull-right" ></i></a></li>
+          <li><a href="{% url 'tesolimpiade:matematika' %}">Matematika <i class="fa fa-angle-double-right fa-pull-right"></i></a></li>
+        </ul>
+      </li>
+        <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user}}  <i class="fa fa-gears"></i></a>
+        <ul class="dropdown-menu">
+          <li><a href ="#"><i class="fa fa-user fa-pull-left">&nbsp;&nbsp;&nbsp;</i>Profil</a></li>
+          <li><a href ="{% url 'data_user:view'%}" ><i class="fa fa-users fa-pull-left">&nbsp;&nbsp;</i>Data User</a></li>
+          <li><a href ="{% url 'bobot:view' %}" ><i class="fa fa-gear fa-pull-left">&nbsp;&nbsp;&nbsp;</i>Bobot</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href ="{% url 'login:doLogout'%}" ><i class="fa fa-power-off fa-pull-left">&nbsp;&nbsp;&nbsp;
+            </i>Logout</a></li>
+         
+        </ul>
+      </li>
       </ul>
     </div>
   </nav>
