--- a/PythonMoora/templates/layout/dashboard/sidebar.html
+++ b/PythonMoora/templates/layout/dashboard/sidebar.html
@@ -9,25 +9,25 @@
       <li class="header"></li>
       <li>
         <a href="{% url 'admin:index' %}">
-          <i class="fa fa-user"></i> Admin Site</a>
+          <i class="fa fa-dashboard"></i> <span>Admin Site</span></a>
 
         </li>
         <!-- <li class="header"></li> -->
 
-        <li><a href="{% url 'bobot:view' %}">  <i class="fa fa-gears"></i> Bobot</a></li>
-        <li><a href="{% url 'data_siswa:view' %}">  <i class="fa fa-gears"></i> Tambah Data</a></li>
+        <li><a href="{% url 'daftar_olimpiade:view' %}">  <i class="fa fa-user"></i><span>Daftar Peserta Tes</span></a></li>
+       
 
         <!-- <li class="header"></li> -->
         <li class="treeview active menu-open">
           <a href="#">
-            <i class="fa fa-database"></i>
+            <i class="fa fa-users"></i>
             <span>Data Peserta</span>
           </a>
           <ul class="treeview-menu">    
-            <li><a href="{% url 'data_siswa:biologi' %}"><i class="fa fa-circle-o"></i>Olimpiade Biologi</a></li>
-            <li><a href=""><i class="fa fa-circle-o"></i>Olimpiade Fisikia</a></li>
-            <li><a href=""><i class="fa fa-circle-o"></i>Olimpiade Kimia</a></li>
-            <li><a href=""><i class="fa fa-circle-o"></i>Olimpiade Matematika</a></li>
+            <li><a href="{% url 'data_siswa:view' %}"><i class="fa  fa-dot-circle-o"></i>Olimpiade Biologi</a></li>
+            <li><a href="{% url 'data_siswa:fisika' %}"><i class="fa  fa-dot-circle-o"></i>Olimpiade Fisikia</a></li>
+            <li><a href="{% url 'data_siswa:kimia' %}"><i class="fa  fa-dot-circle-o"></i>Olimpiade Kimia</a></li>
+            <li><a href="{% url 'data_siswa:matematika' %}"><i class="fa  fa-dot-circle-o"></i>Olimpiade Matematika</a></li>
           </ul>
         </li>
 
@@ -37,15 +37,15 @@
             <span>Data Siswa</span>
           </a>
           <ul class="treeview-menu">    
-            <li><a href="{% url 'siswa:view' %}"><i class="fa fa-circle-o"></i>Siswa</a></li>
-            <li><a href="{% url 'nilai_akademik:view' %}"><i class="fa fa-circle-o"></i>Nilai Akademik</a></li>
-            <li><a href="{% url 'karakter:view' %}"><i class="fa fa-circle-o"></i>Karakter</a></li>
-            <li><a href="{% url 'plomba:view' %}"><i class="fa fa-circle-o"></i>Pengalaman Lomba</a></li>
-            <li><a href="{% url 'hasiltes:view' %}"><i class="fa fa-circle-o"></i>Hasil Tes</a></li>
-            <li><a href="{% url 'kelas:view' %}"><i class="fa fa-circle-o"></i>Kelas</a></li>
+            <li><a href="{% url 'siswa:view' %}"><i class="fa  fa-dot-circle-o"></i>Siswa</a></li>
+            <li><a href="{% url 'nilai_akademik:view' %}"><i class="fa  fa-dot-circle-o"></i>Nilai Akademik</a></li>
+            <li><a href="{% url 'karakter:view' %}"><i class="fa  fa-dot-circle-o"></i>Karakter</a></li>
+            <li><a href="{% url 'plomba:view' %}"><i class="fa  fa-dot-circle-o"></i>Pengalaman Lomba</a></li>
+            <li><a href="{% url 'hasiltes:view' %}"><i class="fa  fa-dot-circle-o"></i>Hasil Tes</a></li>
+            <li><a href="{% url 'kelas:view' %}"><i class="fa  fa-dot-circle-o"></i>Kelas</a></li>
           </ul>
         </li>
-        <li><a href="{% url 'hasil_akhir:view' %}">  <i class="fa fa-mortar-board"></i> Mata Pelajaran</a></li>
+        <li><a href="{% url 'hasil_akhir:view' %}">  <i class="fa fa-mortar-board"></i><span>Mata Pelajaran</span></a></li>
         
       </ul>
     </section>
