--- a/PythonMoora/data_user/templates/data_user/index.html
+++ b/PythonMoora/data_user/templates/data_user/index.html
@@ -11,9 +11,12 @@
     </section>
     <section class="content">
         <div class="row">
+        {% comment %} <div class="col-md-2"></div> {% endcomment %}
             <div class="col-sm-12">
                 {% include 'data_user/table.html' %}
             </div>
+        {% comment %} <div class="col-md-2"></div> {% endcomment %}
+
         </div>
     </section>
 </div>
