--- a/PythonMoora/templates/layout/dashboard/header.html
+++ b/PythonMoora/templates/layout/dashboard/header.html
@@ -27,9 +27,9 @@
         </ul>
       </li>
         <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user}}  <i class="fa fa-gears"></i></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user.last_name}}  <i class="fa fa-gears"></i></a>
         <ul class="dropdown-menu">
-          <li><a href ="#"><i class="fa fa-user fa-pull-left">&nbsp;&nbsp;&nbsp;</i>Profil</a></li>
+        <br>
           <li><a href ="{% url 'data_user:view'%}" ><i class="fa fa-users fa-pull-left">&nbsp;&nbsp;</i>Data User</a></li>
           <li><a href ="{% url 'bobot:view' %}" ><i class="fa fa-gear fa-pull-left">&nbsp;&nbsp;&nbsp;</i>Bobot</a></li>
           <li role="separator" class="divider"></li>
