--- a/PythonMoora/data_user/templates/data_user/edit.html
+++ b/PythonMoora/data_user/templates/data_user/edit.html
@@ -82,4 +82,12 @@
 
 </script>
 
+{% if messages %}
+  {% for message in messages %}
+  <script>
+    toastr.success('{{message}}')
+  </script>
+  {% endfor %}
+  {% endif %}
+
 {% endblock %}
