--- a/PythonMoora/management/kelas/templates/kelas/edit.html
+++ b/PythonMoora/management/kelas/templates/kelas/edit.html
@@ -114,6 +114,13 @@
   }
 </script>
 
+{% if messages %}
+  {% for message in messages %}
+  <script>
+    toastr.success('{{message}}')
+  </script>
+  {% endfor %}
+  {% endif %}
 
 
 {% endblock %}
