--- a/PythonMoora/soal/soalbiologi/templates/soalbiologi/index.html
+++ b/PythonMoora/soal/soalbiologi/templates/soalbiologi/index.html
@@ -36,11 +36,10 @@
           <div class="box-body">
             <!-- </div> -->
             <!-- /.col -->
-            <div class="col-md-1"></div>
-            <div class="col-md-12" align="justify">
+            <div class="col-md-10" align="justify" >
 
               {% for tp in tesolimpiade2  %}
-              {% if tp.1 ==  "../media/gambar/icon.png"  %}
+              {% if tp.1 ==  "gambar/icon.png"  %}
               <p style="font-size: 12pt; font-weight: bold;">{{tp.0}}. {{tp.2}}</p>
               <input type="text" id="kunci{{tp.0}}" value="{{tp.8}}" hidden > 
               <input type="text" id="jwb{{tp.0}}" value="" hidden > 
@@ -94,6 +93,7 @@
           <hr/>
 
         </div>
+            <div class="col-md-1"></div>
         <div class="col-md-1"></div>
 
       </div>
