--- a/PythonMoora/data_user/templates/data_user/table.html
+++ b/PythonMoora/data_user/templates/data_user/table.html
@@ -73,13 +73,13 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Siswa</h4>
+          <h4 class="modal-title">User</h4>
         </div>
         <div class="modal-body">
           <!-- <p>One fine body&hellip;</p> -->
           <div class="box box-danger">
             <div class="box-header">
-              <h3 class="box-title">Input Data Siswa</h3>
+              <h3 class="box-title">Input Data User</h3>
             </div>
             <div class="box-body">
               <!-- Date dd/mm/yyyy -->
@@ -129,10 +129,10 @@
             </div>
           </div>
           <br>
-             <div class="form-group ">
+             <div class="form-group " hidden>
             <label for="" class="control-label">
                 Aktifkan Langsung User ?
-            </label> &nbsp; <input type="checkbox" name="superuser">
+            </label> &nbsp; <input type="checkbox" name="superuser" checked>
             </div>
             <br>
       </div>
@@ -159,3 +159,10 @@
   }
 
 </script>
+{% if messages %}
+  {% for message in messages %}
+  <script>
+    toastr.success('{{message}}')
+  </script>
+  {% endfor %}
+  {% endif %}
