--- a/PythonMoora/management/data_siswa/templates/data_siswa/edit_siswabio.html
+++ b/PythonMoora/management/data_siswa/templates/data_siswa/edit_siswabio.html
@@ -5,7 +5,7 @@
 <div class="content-wrapper">
     <section class="content-header">
         <h1>
-            Edit Data Peserta Olimpiade
+            Edit Data Peserta Olimpiade Biologi
         </h1>
         <ol class="breadcrumb">
             <li>
@@ -16,17 +16,19 @@
         </ol>
     </section>
 <br>
+    <section class="content-header">
+
  <div class="col-md-6">
   <form action="{% url 'data_siswa:updatebio' siswa.id %}" method="POST" enctype="multipart/form-data">
                                 {% csrf_token %}
             <div class="form-group">
                 <label for="username">username</label>
-                <input type="text" required name="username" value="{{siswa.user}}" class="form-control">
+                <input type="text" required name="username" value="{{siswa.user}}" class="form-control" readonly>
             </div>
-            <div class="form-group">
+            {% comment %} <div class="form-group">
                 <label for="password">Password</label>
                 <input type="text" required name="password" value="" class="form-control">
-            </div>
+            </div> {% endcomment %}
 
             <div class="form-group">
                 <label for="" class="control-label">Nama</label>
@@ -50,8 +52,8 @@
               <!-- /.form-group -->
             </div>
             <!-- /.col -->
-            <div class="col-md-6">
-            <div class="form-group" >
+            <div class="col-md-6" >
+            <div class="form-group" hidden>
                 <label for="" class="control-label">Olimpiade</label>
                 <input type="text" class="form-control" name="mata_pelajaran" value="biologi" required>
             </div>
@@ -128,6 +130,8 @@
             <button type="submit" class="btn btn-primary">Save</button> {% endcomment %}
         </div>
   </div>
+    </section>
+
 </div>
 
 <script>
