--- a/PythonMoora/templates/layout/dashboard/header.html
+++ b/PythonMoora/templates/layout/dashboard/header.html
@@ -27,7 +27,7 @@
         </ul>
       </li>
         <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user.last_name}}  <i class="fa fa-gears"></i></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user}}  <i class="fa fa-gears"></i></a>
         <ul class="dropdown-menu">
         <br>
           <li><a href ="{% url 'data_user:view'%}" ><i class="fa fa-users fa-pull-left">&nbsp;&nbsp;</i>Data User</a></li>
